<resources>
    <string name="app_name">GameBox</string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="password2">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="enroll">注册</string>
    <string name="submit">提交</string>
    <string name="welcome">欢迎</string>

    <string name="recommend">首页</string>
    <string name="classify">社区</string>
    <string name="collection">游戏库</string>
    <string name="user">我的</string>
    <string name="user_user">用户:</string>

    <string name="user_">个人简介:</string>
    <string name="title_activity_settings">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>